src/objects/QIRS_Site_Notification__c.object
<CustomObject>
    <fields>
        <fullName>Business_Group__c</fullName>
        <description>All Business Group related values.</description>
        <label>Business Group</label>
        <picklist>
            <picklistValues>
                <fullName>zzBBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzCDMA/LTE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>zzCET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzCore Platforms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzDNW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzGlobal LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzGSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzMWT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzOptical Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzPacket Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzPacket Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzPerfect Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzRadio Platforms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzSmall Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCDMA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>Aichi Japan (Flextronic)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alsdorf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arad (Israel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arden Hills (Celestica)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arlington Heights (IL75)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangkok (Benchmark)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai (Flextronics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai (Motorola)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chihuahua (Foxconn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copenhagen (Denmark)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copenhagen (ZDK02)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech (Foxconn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dongguan (Accton)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dongguan (Aztech)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doumen (Flextronics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop Ship Supplier (Site specified in description)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dusseldorf - 3PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elgin (After Market) - Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elgin (Depot) - Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elgin (IL105)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flensburg (ZWG30)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fort Worth (TX14)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fort Worth (TX55)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fort Worth (TX-91)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Repair Ops (Site specified in description)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guadalajara (Flextronics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guadalajara (Solectron)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Business Line Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Group__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>Business Group Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Group Notification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>